package Facade.Bank;

public class WelcomeToBank{
	
	public WelcomeToBank() {
		
		System.out.println("Welcome to ABC Bank");
		System.out.println("We are happy to give you your money if we can find it\n");
		
		
	}
	
}